--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,18 @@ tr:nth-child(even) {
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
+
+.table-container {
+            display: none; /* Ocultar la tabla por defecto */
+        }
+        
+    
+
+body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
